# stackprep-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: publish.yml
scripts/: bump_version.sh  generate_readme.py
src/stackprep_mcp/: server.py
src/stackprep_mcp/skills/: certification.md  interview.md
src/stackprep_pro/: server.py
src/stackprep_pro/skills/: certification.md  interview.md
