[project]
name = "stackprep-mcp"
version = "0.1.0"
description = "stackprep as an MCP server — interview & certification prep for any AI client"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
stackprep-mcp = "stackprep_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stackprep_mcp"]
